--- a/static/table/index.html
+++ b/static/table/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <link rel="manifest" href="/static/table/manifest.json">
-  <title>NorenQR — Table</title>
+  <title>AkamiSync — Table</title>
   <link rel="stylesheet" href="/static/table/styles.css">
 </head>
 <body class="hc">
