--- a/static/staff/dashboard.html
+++ b/static/staff/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>NorenQR — Staff</title>
+  <title>AkamiSync — Staff</title>
   <link rel="stylesheet" href="/static/staff/styles.css">
 </head>
 <body>
